# xsay

./: .gitignore  Cargo.toml  LICENSE  PACKAGING.md  README.md  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: release.yml
assets/: tray-32.rgba
docs/: ARCHITECTURE.md  MODULES.md  SYSTEM_DESIGN.md  UI_DESIGN_PROMPT.md
examples/: paste_test.rs
share/applications/: xsay.desktop
snap/: snapcraft.yaml
snap/local/: README.md  xsay.desktop
src/: audio.rs  autostart.rs  config.rs  download.rs  error.rs  fonts.rs  history.rs  hotkey.rs  hotkey_evdev.rs  inject.rs  ipc.rs  main.rs  model.rs  overlay.rs  sensevoice.rs  settings_ui.rs  state.rs  theme.rs  transcribe.rs  tray.rs
src/settings_ui/: general_tab.rs  history_tab.rs  hotkey_tab.rs  mod.rs  model_tab.rs  models.rs
windows/: README.md  installer.nsi
