[package]
name = "xsay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xsay"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
whisper-rs = "0.14"
rdev = "0.5"
eframe = { version = "0.29", features = ["default_fonts"] }
egui = "0.29"
enigo = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hf-hub = "0.3"
dirs = "5.0.1"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
