[package]
name = "xsay"
version = "0.1.3"
edition = "2024"
description = "AI voice input tool — hold a hotkey to record, release to transcribe and type"
license = "MIT"
readme = "README.md"

[[bin]]
name = "xsay"
path = "src/main.rs"

[build-dependencies]
# Windows-only at runtime (see build.rs); declared unconditionally so
# `cargo check` on any host can still resolve the graph.
winres = "0.1"

[package.metadata.deb]
maintainer = "mason"
copyright = "2026, mason"
extended-description = """\
xsay captures microphone audio while a configurable hotkey is held \
(or on tap-toggle), transcribes it offline with whisper.cpp, and types \
the result into the focused window. Supports Chinese + English, Wayland \
and X11 on Linux."""
section = "utils"
priority = "optional"
depends = "libc6, libx11-6, libxtst6, libasound2, libgtk-3-0, libayatana-appindicator3-1 | libappindicator3-1, libxdo3"
assets = [
    ["target/release/xsay", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/xsay/README", "644"],
    # Desktop launcher (Ubuntu Software / Activities picks it up).
    ["share/applications/xsay.desktop", "usr/share/applications/xsay.desktop", "644"],
    # App icons in standard hicolor theme paths so GNOME / KDE / etc.
    # resolve them automatically.
    ["share/icons/hicolor/48x48/apps/xsay.png",     "usr/share/icons/hicolor/48x48/apps/xsay.png",     "644"],
    ["share/icons/hicolor/256x256/apps/xsay.png",   "usr/share/icons/hicolor/256x256/apps/xsay.png",   "644"],
    ["share/icons/hicolor/scalable/apps/xsay.svg",  "usr/share/icons/hicolor/scalable/apps/xsay.svg",  "644"],
]

[dependencies]
cpal = "0.15"
whisper-rs = "0.14"
rdev = "0.5"
eframe = { version = "0.34.1", features = ["default_fonts"] }
egui = "0.34.1"
enigo = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hf-hub = "0.3"
dirs = "5.0.1"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
ureq = { version = "2", features = ["native-tls"] }
tray-icon = "0.14"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
gtk = "0.18"
# Same winit version eframe 0.34 transitively pulls in. Needed so we can
# force the GUI event loop onto X11 (XWayland) — GNOME/mutter ignores the
# Wayland protocol extensions we rely on for positioning a transparent
# always-on-top overlay, so `OuterPosition` lands in the wrong place.
winit = "0.30"

# Optional GPU acceleration. Default build = CPU only, works on any machine
# without system dependencies beyond what's already required. Enthusiasts
# and GPU-owning users can opt in via `--features <name>`:
#
#   cuda     NVIDIA + CUDA toolkit installed        (cargo build --release --features cuda)
#   vulkan   cross-vendor, NVIDIA/AMD/Intel         (cargo build --release --features vulkan)
#   metal    macOS Apple Silicon / Intel with Metal (cargo build --release --features metal)
#   hipblas  AMD + ROCm toolkit                     (cargo build --release --features hipblas)
#   coreml   macOS CoreML neural engine             (cargo build --release --features coreml)
#
# Whisper-backend flags above are mutually exclusive (whisper-rs-sys
# links one GGML backend). `build.sh` wraps common permutations.
#
# SenseVoice / ONNX alternative backend — best Chinese accuracy, 5-7x
# faster than Whisper-large, via the sherpa-rs wrapper over sherpa-onnx:
#
#   sensevoice        CPU ONNX (pre-built libs fetched on `cargo build`)
#   sensevoice-cuda   same but with CUDA execution provider
#
# Feature-gated so default build stays whisper-only and avoids pulling
# the ~50MB sherpa-onnx shared library when unused.
[features]
# sensevoice is in the default set because SenseVoice is the fast /
# high-accuracy Chinese path most users end up wanting — making it
# opt-in meant `cargo run` silently fell back to Whisper every new
# clone, and people had to learn the `--features sensevoice` incantation.
# Users who want the absolute-minimum whisper-only build can still
# `cargo build --no-default-features [--features vulkan]`.
default = ["sensevoice"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
hipblas = ["whisper-rs/hipblas"]
coreml = ["whisper-rs/coreml"]
sensevoice = ["dep:sherpa-rs"]
sensevoice-cuda = ["dep:sherpa-rs", "sherpa-rs/cuda"]

[dependencies.sherpa-rs]
version = "0.6"
optional = true
default-features = false
features = ["download-binaries"]
